<resources>
    <string name="app_name">MoviesApp</string>
    <string name="splash_title">IMDb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="olvidaste_contrasena">¿Olvidaste la contraseña?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="you_can_login_with">you can login with</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_min_length">The password must have at least 8 characters</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="search">Search</string>
    <string name="play">Play</string>
    <string name="search_imdb">Search IMDb</string>
    <string name="_2022">2022</string>
    <string name="actor">actor</string>
    <string name="top_picks">Top picks</string>
    <string name="fabian_morales_david">Fabian Morales David</string>
    <string name="add_to_my_following_list">Add to my following list</string>
    <string name="episodes">episodes</string>
    <string name="official_trailer">Official Trailer</string>
    <string name="no_views">No views</string>
    <string name="favorite_people">Favorite people</string>
    <string name="recent_views">Recent views</string>
    <string name="following_list">Following List</string>
    <string name="original_title">(Original title)</string>
    <string name="start_your_following_list">Start your following list</string>
    <string name="create_a_watchlist_dont_miss_any_movie">create a watchlist so you don\'t miss any movies</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="User">user</string>
    <string name="logging_out">Logging Out</string>
    <string name="default_web_client">1084680714992-j4fiikuc3vai0q3c2uc2b25np5504b86.apps.googleusercontent.com</string>
    <string name="user_is_already_registered">User is already registered</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drama">Drama</string>
</resources>