<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.authentication.register.RegisterFragment">


    <ImageView
        android:id="@+id/imBack"
        android:layout_width="@dimen/dimen_30dp"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLogo"
        style="@style/text_view_logo"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@id/imBack"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvUser"
        style="@style/text_bold"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/create_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/tvLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etName"
        style="@style/edit_texts"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/edit_texts"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        style="@style/password_edit_texts"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvPasswordMessage"
        style="@style/small_text"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/password_min_length"
        android:textSize="@dimen/text_size_13sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/login_button"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/accept"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>