<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/menu_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".menu.MenuFragment">


    <Button
        android:id="@+id/btnHome"
        style="@style/menu_button"
        android:drawableTop="@drawable/ic_home"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/menu_button"
        android:drawableTop="@drawable/ic_home"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnHome" />

    <Button
        android:id="@+id/btnPlay"
        style="@style/menu_button"
        android:drawableTop="@drawable/ic_home"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSearch" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/menu_button"
        android:drawableTop="@drawable/ic_home"
        android:text="juan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>