<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_140dp">

    <ImageView
        android:id="@+id/imPoster"
        android:layout_width="85dp"
        android:layout_height="110dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:scaleType="fitXY"
        tools:src="@drawable/facebook_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovie"
        style="@style/text_bold"
        tools:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="@+id/tvDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/small_text"
        android:layout_marginTop="@dimen/dimen_10dp"
        tools:text="@string/_2022"
        app:layout_constraintBottom_toTopOf="@+id/tvActors"
        app:layout_constraintStart_toStartOf="@+id/tvActors"
        app:layout_constraintTop_toBottomOf="@+id/tvMovie" />

    <TextView
        android:id="@+id/tvActors"
        style="@style/small_text"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        tools:text="@string/actor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imPoster"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <View
        style="@style/divider"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>