<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".authentication.login.LoginFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/text_app_logo"
        android:fontFamily="@font/anton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/tvUser"
        style="@style/text_bold"
        android:layout_marginTop="16dp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="@+id/etUser"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/login_edit_texts"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvPassword"
        style="@style/text_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etUser" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/login_button"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgottenPassword" />

    <TextView
        android:id="@+id/tvForgottenPassword"
        style="@style/login_12sp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/olvidaste_contrasena"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etUser"
        style="@style/login_edit_texts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvLoginOptions"
        style="@style/small_text"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/you_can_login_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/fabAppleLogin"
        style="@style/fab"
        app:layout_constraintBottom_toBottomOf="@+id/fabFacebookLogin"
        app:layout_constraintEnd_toStartOf="@+id/fabFacebookLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fabFacebookLogin"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imAppleIcon"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:src="@drawable/ic_apple"
        android:tintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/fabAppleLogin"
        app:layout_constraintEnd_toEndOf="@+id/fabAppleLogin"
        app:layout_constraintStart_toStartOf="@+id/fabAppleLogin"
        app:layout_constraintTop_toTopOf="@+id/fabAppleLogin" />

    <ImageView
        android:id="@+id/fabFacebookLogin"
        style="@style/fab"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/fabGoogleLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fabAppleLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginOptions" />

    <ImageView
        android:id="@+id/imFacebookIcon"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:src="@drawable/ic_facebook"
        android:tintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/fabFacebookLogin"
        app:layout_constraintEnd_toEndOf="@+id/fabFacebookLogin"
        app:layout_constraintStart_toStartOf="@+id/fabFacebookLogin"
        app:layout_constraintTop_toTopOf="@+id/fabFacebookLogin" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="@+id/fabGoogleLogin"
        app:layout_constraintEnd_toEndOf="@+id/fabGoogleLogin"
        app:layout_constraintStart_toStartOf="@+id/fabGoogleLogin"
        app:layout_constraintTop_toTopOf="@+id/fabGoogleLogin" />


    <ImageView
        android:id="@+id/fabGoogleLogin"
        style="@style/fab"
        app:layout_constraintBottom_toBottomOf="@+id/fabFacebookLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fabFacebookLogin"
        app:layout_constraintTop_toTopOf="@+id/fabFacebookLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imGoogleIcon"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:src="@drawable/ic_google"
        android:tintMode="add"
        app:layout_constraintBottom_toBottomOf="@+id/fabGoogleLogin"
        app:layout_constraintEnd_toEndOf="@+id/fabGoogleLogin"
        app:layout_constraintStart_toStartOf="@+id/fabGoogleLogin"
        app:layout_constraintTop_toTopOf="@+id/fabGoogleLogin" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        style="@style/small_text"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:text="@string/dont_have_an_account"
        app:layout_constraintEnd_toStartOf="@+id/tvRevister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fabFacebookLogin" />

    <TextView
        android:id="@+id/tvContinueAsAGuest"
        style="@style/text_bold"
        android:layout_marginTop="16dp"
        android:text="@string/continue_as_a_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount" />

    <TextView
        android:id="@+id/tvRevister"
        style="@style/text_bold"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/tvDontHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
        app:layout_constraintTop_toTopOf="@+id/tvDontHaveAccount"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>